research/cv/delf/src/extract_feature.log
  File "extract_feature.py", line 87
    print(f'Skipping {image_paths[i]}')
                                     ^
SyntaxError: invalid syntax
